rutaslogs.log
Watching for file changes with StatReloader
C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\rutas_tablet\settings.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).

You have 1 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): auth.
Run 'python manage.py migrate' to apply them.
June 28, 2023 - 15:32:40
Django version 3.2.19, using settings 'rutas_tablet.settings'
Starting development server at http://0.0.0.0:80/
Quit the server with CTRL-BREAK.
Watching for file changes with StatReloader
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\config.py", line 562, in configure
    handler = self.configure_handler(handlers[name])
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\config.py", line 735, in configure_handler
    result = factory(**kwargs)
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\__init__.py", line 1087, in __init__
    StreamHandler.__init__(self, self._open())
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\__init__.py", line 1116, in _open
    return open(self.baseFilename, self.mode, encoding=self.encoding)
FileNotFoundError: [Errno 2] No such file or directory: 'C:\\ruta\\al\\archivo\\de\\registro.log'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\threading.py", line 926, in _bootstrap_inner
    self.run()
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\threading.py", line 870, in run
    self._target(*self._args, **self._kwargs)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\utils\autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\core\management\commands\runserver.py", line 110, in inner_run
    autoreload.raise_last_exception()
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\utils\autoreload.py", line 87, in raise_last_exception
    raise _exception[1]
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\core\management\__init__.py", line 375, in execute
    autoreload.check_errors(django.setup)()
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\utils\autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\__init__.py", line 19, in setup
    configure_logging(settings.LOGGING_CONFIG, settings.LOGGING)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\utils\log.py", line 75, in configure_logging
    logging_config_func(logging_settings)
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\config.py", line 799, in dictConfig
    dictConfigClass(config).configure()
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\config.py", line 570, in configure
    '%r' % name) from e
ValueError: Unable to configure handler 'file'

C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\rutas_tablet\settings.py changed, reloading.
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\config.py", line 562, in configure
    handler = self.configure_handler(handlers[name])
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\config.py", line 735, in configure_handler
    result = factory(**kwargs)
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\__init__.py", line 1087, in __init__
    StreamHandler.__init__(self, self._open())
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\__init__.py", line 1116, in _open
    return open(self.baseFilename, self.mode, encoding=self.encoding)
FileNotFoundError: [Errno 2] No such file or directory: 'C:\\ruta\\al\\archivo\\de\\registro.log'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\threading.py", line 926, in _bootstrap_inner
    self.run()
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\threading.py", line 870, in run
    self._target(*self._args, **self._kwargs)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\utils\autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\core\management\commands\runserver.py", line 110, in inner_run
    autoreload.raise_last_exception()
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\utils\autoreload.py", line 87, in raise_last_exception
    raise _exception[1]
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\core\management\__init__.py", line 375, in execute
    autoreload.check_errors(django.setup)()
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\utils\autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\__init__.py", line 19, in setup
    configure_logging(settings.LOGGING_CONFIG, settings.LOGGING)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\utils\log.py", line 75, in configure_logging
    logging_config_func(logging_settings)
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\config.py", line 799, in dictConfig
    dictConfigClass(config).configure()
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\logging\config.py", line 570, in configure
    '%r' % name) from e
ValueError: Unable to configure handler 'file'

C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\rutas_tablet\settings.py changed, reloading.
Traceback (most recent call last):
  File "manage.py", line 22, in <module>
    main()
  File "manage.py", line 18, in main
    execute_from_command_line(sys.argv)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\core\management\__init__.py", line 419, in execute_from_command_line
    utility.execute()
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\core\management\__init__.py", line 363, in execute
    settings.INSTALLED_APPS
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\conf\__init__.py", line 82, in __getattr__
    self._setup(name)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\conf\__init__.py", line 69, in _setup
    self._wrapped = Settings(settings_module)
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\venv\lib\site-packages\django\conf\__init__.py", line 170, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
  File "c:\users\desa03\appdata\local\programs\python\python37\lib\importlib\__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet\rutas_tablet\settings.py", line 24
    'filename': 'C:\Users\DESA03\Desktop\Desarrollo\Python\rutas_tablet',
               ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Watching for file changes with StatReloader
Not Found: /favicon.ico
